switch to h2 database to avoid conetion issue with MySQl